cyber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerable-web
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerable-web
  template:
    metadata:
      labels:
        app: vulnerable-web
    spec:
      containers:
      - name: web
        image: nginx:1.14
        securityContext:
          privileged: true
        ports:
        - containerPort: 80
