cyber/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Audit
  rules:
  - name: no-privileged-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Les conteneurs privilégiés sont interdits."
      pattern:
        spec:
          containers:
          - =(securityContext):
              =(privileged): "false"
