cyber/manifest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Audit # "Audit" signale la faille mais laisse passer. "Enforce" bloque le déploiement. Met "Audit" pour que l'IA de Maxime puisse corriger !
  rules:
  - name: check-privileged
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Les conteneurs privilégiés sont interdits."
      pattern:
        spec:
          containers:
          - =(securityContext):
              =(privileged): "false"
